--- a/public/css/register.css
+++ b/public/css/register.css
@@ -91,3 +91,11 @@ body {
     font-size: 16px;
     padding: 10px;
   }
+
+  .code {
+    pointer-events: none;
+  }
+
+  #code{
+    background-color: white;
+  }
