--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
             
             <div class="row">
                 <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6">
-                    <form class="form-horizontal" action="/home" method="POST">
+                    <form class="form-horizontal" action="/home" method="GET">
                         <div class="heading">登入介面</div>
                         <div class="form-group">
                             <i><img class="icon" src="pics/user_name_icon.png"></i><input required name="login[username]" type="email" class="form-control user_account" placeholder="Username" id="exampleInputEmail1">
@@ -25,7 +25,9 @@
                         </div>
                         <div class="form-group">
                             <button type="submit" id="btn" class="btn btn-default">Log in</button>
-                            <script src="/static/js/password.js"></script>
+                            <script src="/static/js/password.js">
+                                const users = <% JSON.stringify(user) %>;//將user表格傳入js檔
+                            </script>
                             <span><a href="/register" class="create_account">註冊</a></span>
                         </div>
                     </form>
