--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,65 +128,120 @@ nav > ul {
     display: flex; /*並排*/
     justify-content: left;
 }
-.test {
+.container {
     z-index: 1;
     position: relative;
     height: 1000px;
     width: 100%;
+    padding: 50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
     background-color: rgb(40, 40, 40);
 }
 footer {
     z-index: 5;
     position: fixed;
+    /* opacity: 0; */
     display: none;
-    /* display: none; */
     bottom: 0;
     width: 100%;
     height: 13vh;
 }
 .show {
+    /* opacity: 1; */
     display: block;
 }
 
 /* music block */
 .musicList {
-    z-index: 10;
+    /* z-index: 3; */
     width: 100%;
-    padding: 5vh;
     /* height: 100vh; */
     background-color: rebeccapurple;
+    text-align: left;
+    /* border: solid yellow 1px; */
+    border-collapse: collapse;
+}
+.musicList th {
+    border-bottom: solid yellowgreen 1px;
 }
 .musicBlock {
     display: flex;
-    margin: 5vh;
-    /* width: 100%; */
+    /* margin: 3vh; */
+    padding: 3vh;
+    width: 100%;
     height: 30vh;
-    background-color: brown;
-    cursor: pointer;
+    background-color: rgb(50, 50, 50);
+    /* cursor: pointer; */
 }
 .musicCover {
-    width: 30%;
-    height: 30vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    /* height: 30vh; */
     left: 0;
-    background-color: bisque;
+    background-color: inherit;
+    cursor: pointer;
+}
+.musicCover:hover .imgs{
+    opacity: 0.2;
+}
+.musicCover:hover i {
+    opacity: 1;
+}
+.musicCover>i {
+    position: absolute;
+    opacity: 0;
 }
 .musicCover .imgs {
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: fill;
+    transition: all 0.2s linear;
 }
 .musicInfo {
     width: 70%;
-    height: 30vh;
+    /* height: 30vh; */
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    text-align: center;
+    align-items: center;
     background-color: blueviolet;
 }
 .musicName {
-    height: 60%;
+    width: 100%;
+    height: 50%;
+    font-size: 40px;
     background-color: aquamarine;
 }
 .musicSinger {
-    height: 40%;
+    width: 100%;
+    height: 35%;
+    font-size: 20px;
+    background-color: tomato;
+}
+.musicAbout {
+    display: flex;
+    width: 100%;
+    height: 15%;
     background-color: darkgreen;
+}
+.musicType {
+    width: 45%;
+    padding-left: 50px;
+}
+.musicLanguage {
+    width: 40%;
+}
+.musicPlaytime {
+    width: 20%;
+}
+.functionBar {
+    width: 10%;
+    background-color: thistle;
 }
