--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,32 @@
 <% layout('layout') %>
-<div class="test">
-    <!-- 456 <br>
-    <audio src="/static/music/0001.mp3" autoplay controls></audio> -->
-    <div class="musicList">
-        <div class="musicBlock">
+<div><h1>為您推薦</h1></div>
+<div class="musicList">
+    <% for(var i = 0; i < song.length; i++){ %>
+        <div class="musicBlock" id="<%= song[i].filelink %>">
             <div class="musicCover">
-
+                <i class="fa-solid fa-circle-play fa-2xl"></i>
+                <img src="/static/images/<%= song[i].cover_img %>.png" alt="" class="imgs">
             </div>
             <div class="musicInfo">
                 <div class="musicName">
-                    <h1>這是歌名</h1>
+                    <%= song[i].songname %>
                 </div>
                 <div class="musicSinger">
-                    <h1>這是歌手</h1>
+                    <%= singer[song[i].singer_id-1].singername %>
+                </div>
+                <div class="musicAbout">
+                    <div class="musicType">
+                        類型 : <%= song[i].music_types %>
+                    </div>
+                    <div class="musicLanguage">
+                        語言 : <%= song[i].music_languages %>
+                    </div>
+                    <div class="musicPlaytime">
+                        播放次數 : <%= song[i].playtime %>
+                    </div>
                 </div>
             </div>
+            <div class="functionBar"></div>
         </div>
-        <div class="musicBlock">
-            <div class="musicCover">
-
-            </div>
-            <div class="musicInfo">
-                <div class="musicName">
-                    <h1>這是歌名2</h1>
-                </div>
-                <div class="musicSinger">
-                    <h1>這是歌手2</h1>
-                </div>
-            </div>
-        </div>
-    </div>
+    <% } %>
 </div>
