--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,16 +18,17 @@
                     <form class="form-horizontal" action="/home" method="GET">
                         <div class="heading">登入介面</div>
                         <div class="form-group">
-                            <i><img class="icon" src="pics/user_name_icon.png"></i><input required name="login[username]" type="email" class="form-control user_account" placeholder="Username" id="exampleInputEmail1">
+                            <i><img class="icon" src="static/images/user_name_icon.png"></i><input required name="login[username]" type="email" class="form-control user_account" placeholder="Username" id="exampleInputEmail1">
                         </div>
                         <div class="form-group">
-                            <i><img class="icon" src="pics/lock_icon.png"></i><input required name="login[password]" type="password" class="form-control password" placeholder="Password" />
+                            <i><img class="icon" src="static/images/lock_icon.png"></i><input required name="login[password]" type="password" class="form-control password" placeholder="Password" />
                         </div>
                         <div class="form-group">
                             <button type="submit" id="btn" class="btn btn-default">Log in</button>
-                            <script src="/static/js/password.js">
-                                const users = <% JSON.stringify(user) %>;//將user表格傳入js檔
+                            <!-- <script>
+                                var users = JSON.stringify(user);//將user表格傳入js檔
                             </script>
+                            <script src="/static/js/password.js"></script> -->
                             <span><a href="/register" class="create_account">註冊</a></span>
                         </div>
                     </form>
