--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,6 +1,6 @@
 <footer id="footer">
     <div class="audio-player">
-        <audio src="/static/music/0001.mp3" preload="metadata" autoplay id="myAudio"></audio>
+        <audio src="/static/music/0001.mp3" preload="metadata" id="myAudio"></audio>
         <div class="play-btn"><i class="fa-solid fa-circle-play fa-2xl"></i></div>
         <div class="progress-bar">
         <div class="progress"></div>
