fix register page and fix verification code
重製register page排版，驗證碼生成與更新

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -97,6 +97,10 @@ body {
     color: #007bff;
     text-decoration: none;
   }
+  .reg_btn_position{
+    text-align: right;
+    font-size: 16px;
+  }
   
   .create_account:hover {
     text-decoration: underline;
