--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
                         </div>
                         <div class="form-group">
                             <button type="submit" id="btn" class="btn btn-default">Log in</button>
-                            <span><a href="/register" class="create_account">註冊</a></span>
+                            <div class="reg_btn_position">還沒<a href="/register" class="create_account">註冊</a>？ 趕緊加入我們！</div>
                         </div>
                     </form>
                 </div>
