every verification in register page
判定註冊是否具備完整資訊，但無法實現網頁跳轉

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="main">
-        <form id="register-form" action="/" method="GET">
+        <form id="register-form" method="GET"> <!--  action="/"  -->
             <div class="login">
                 <div class="log-con">
                     <div class="heading">註冊</div>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="data_input">
                         <div class="before_input">確認</div>
-                        <input type="password" id="re_password" class="re_password input_block" placeholder="再次確認密碼"/>
+                        <input type="password" id="repassword" class="repassword input_block" placeholder="再次確認密碼"/>
                     </div>
                     
                     <div class="birthday">
