--- a/public/css/login.css
+++ b/public/css/login.css
@@ -73,7 +73,7 @@ body {
   .btn-default {
     background-color: #5f8fc6;
     color: #fff;
-    border-radius: 0;
+    border-radius: 5px;
     border: none;
     font-size: 16px;
     font-weight: bold;
