fix register add regfin
將birth的輸入型態改為"date"
將輸入改為必填欄位，省去用js判斷
增加性別選擇欄位
註冊資訊可存入資料庫(但是要重啟伺服器才能更新)
新增註冊成功介面
ip問題仍未解決

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -111,7 +111,7 @@ body {
   /*input block*/
   .data_input{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
   }
   .before_input{
@@ -125,7 +125,7 @@ body {
   /*class = birthday*/
   .birthday {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
   }
   
@@ -201,6 +201,7 @@ body {
     height: 40px;
     text-align: center;
     box-shadow: 0px 5px 4px #445867;
+    cursor: pointer;
   }
   .reg_btn:hover {
     background-color: #406183;
