--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,6 +174,7 @@ footer {
     width: 100%;
     height: 30vh;
     background-color: rgb(50, 50, 50);
+    border: solid 1px black;
     /* cursor: pointer; */
 }
 .musicCover {
@@ -211,25 +212,25 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
 }
 .musicName {
     width: 100%;
     height: 50%;
     font-size: 40px;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 .musicSinger {
     width: 100%;
     height: 35%;
     font-size: 20px;
-    background-color: tomato;
+    /* background-color: tomato; */
 }
 .musicAbout {
     display: flex;
     width: 100%;
     height: 15%;
-    background-color: darkgreen;
+    /* background-color: darkgreen; */
 }
 .musicType {
     width: 45%;
@@ -243,5 +244,5 @@ footer {
 }
 .functionBar {
     width: 10%;
-    background-color: thistle;
+    /* background-color: thistle; */
 }
