--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,9 +170,9 @@ footer {
 .musicBlock {
     display: flex;
     /* margin: 3vh; */
-    padding: 3vh;
+    padding: 5px;
     width: 100%;
-    height: 30vh;
+    height: 150px;
     background-color: rgb(50, 50, 50);
     border: solid 1px black;
     /* cursor: pointer; */
