--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
                     <form id="login-form" class="form-horizontal" action="/home" method="GET">
                         <div class="heading">登入介面</div>
                         <div class="form-group">
-                            <i><img class="icon" src="static/images/user_name_icon.png"></i><input required name="login[username]" type="email" class="form-control user_account" placeholder="Username" id="username">
+                            <i><img class="icon" src="static/images/user_name_icon.png"></i><input required name="login[username]" type="text" class="form-control user_account" placeholder="Username" id="username">
                         </div>
                         <div class="form-group">
                             <i><img class="icon" src="static/images/lock_icon.png"></i><input required name="login[password]" type="password" class="form-control password" placeholder="Password" id="password">
