--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,13 +20,13 @@
             
             <div class="row">
                 <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6">
-                    <form id="login-form" class="form-horizontal" action="/home" method="GET">
+                    <form id="login-form" class="form-horizontal" action="/loginBuffer" method="POST">
                         <div class="heading">登入介面</div>
                         <div class="form-group">
-                            <i><img class="icon" src="static/images/user_name_icon.png"></i><input required name="login[username]" type="text" class="form-control user_account" placeholder="Username" id="username">
+                            <i><img class="icon" src="static/images/user_name_icon.png"></i><input required name="login_username" type="text" class="form-control user_account" placeholder="Username" id="username">
                         </div>
                         <div class="form-group">
-                            <i><img class="icon" src="static/images/lock_icon.png"></i><input required name="login[password]" type="password" class="form-control password" placeholder="Password" id="password">
+                            <i><img class="icon" src="static/images/lock_icon.png"></i><input required name="login_password" type="password" class="form-control password" placeholder="Password" id="password">
                         </div>
                         <div class="form-group">
                             <button type="submit" id="btn" class="btn btn-default">Log in</button>
