refactor: 優化search傳遞的資料寫法
改為將Singer中的singername合併至Song傳遞，取代原本需而外傳遞Singer表格。

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -11,7 +11,7 @@
                     <%= song[i].songname %>
                 </div>
                 <div class="musicSinger">
-                    <%= singer[song[i].singer_id-1].singername %>
+                    <%= song[i].singername %>
                 </div>
                 <div class="musicAbout">
                     <div class="musicType">
