feat: 可將首頁音樂存入指定清單中(尚無清單頁面)
index.js:
建立addMusicToList路由，用來處理音樂加入清單的請求。

index.ejs:
在音樂區塊最右方加入功能欄位，可將音樂加入輸入的清單中。

script.js:
儲存按鈕被點擊時，切換到輸入清單欄位。
清單輸入完畢時，傳送相關資料給後端，切換回儲存按鈕。

style.css:
裝飾一下音樂區塊的功能欄位。

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -244,5 +244,20 @@ footer {
 }
 .functionBar {
     width: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
     /* background-color: thistle; */
+}
+.functionBar:hover {
+    background-color: rgb(115, 115, 115);
+    color: black;
+}
+.functionBar>.confirm-form {
+    display: none;
+}
+.functionBar input {
+    width: 100px;
+    font-size: 10px;
 }
