feat: 你的清單介面
index.js:
可從資料庫抓取使用者清單資料在介面中顯示。
新增/playlist/list路由，用來處理前端傳入的清單編號，顯示對應的歌曲。

playlist.ejs:
建立清單區塊。

script.js:
新增播放清單的點擊事件。
事件發生時，直接由網址跳轉介面並依對應的清單編號顯示歌曲。

style.css:
裝飾清單區塊。

--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -1,2 +1,18 @@
 <% layout('layout') %>
-<h1>這裡是播放清單</h1>
+<div class="playlist">
+    <h1>這裡是播放清單</h1>
+    <% for(var i = 0; i < lists.length; i++){ %>
+        <% var createDate = new Date(lists[i].createdate).toLocaleDateString('zh-TW') %>
+        <div class="list" id="<%= lists[i].list_id %>">
+            <div class="listName">
+                <%= lists[i].listname %>
+            </div>
+            <div class="listTotalSong">
+                <%= lists[i].songCounts %> 首歌曲
+            </div>
+            <div class="listCreateDate">
+                建立時間: <%= createDate %>
+            </div>
+        </div>
+    <% } %>
+</div>
