--- a/public/css/style.css
+++ b/public/css/style.css
@@ -261,3 +261,37 @@ footer {
     width: 100px;
     font-size: 10px;
 }
+
+/* playlist */
+.playlist {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+.list {
+    display: flex;
+    align-items: center;
+    width: 70%;
+    height: auto;
+    /* background-color: tomato; */
+    border: 1px solid black;
+    cursor: pointer;
+}
+.list:hover {
+    background-color: rgb(115, 115, 115);
+}
+.listName {
+    width: 50%;
+    font-size: 30px;
+}
+.listTotalSong {
+    width: 20%;
+    align-self: flex-end;
+}
+.listCreateDate {
+    width: 30%;
+    align-self: flex-end;
+}
