--- a/views/search.ejs
+++ b/views/search.ejs
@@ -25,7 +25,18 @@
                     </div>
                 </div>
             </div>
-            <div class="functionBar"></div>
+            <div class="functionBar">
+                <div class="store-button">
+                    <i class="fa-solid fa-folder-plus">儲存</i>
+                </div>
+                <div class="confirm-form">
+                    <form>
+                        <label for="list">儲存至...</label>
+                        <input type="text" id="store-list">
+                        <button type="submit" class="submit-btn">submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
     <% } %>
 </div>
