--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                     <%= song[i].songname %>
                 </div>
                 <div class="musicSinger">
-                    <%= singer[song[i].singer_id-1].singername %>
+                    <%= song[i].singername %>
                 </div>
                 <div class="musicAbout">
                     <div class="musicType">
