refactor: 修改有音樂區塊介面的render。
由於index.ejs, search.ejs, trend.ejs 基本上只有選取音樂內容不同而已，故統一改為musiclist.ejs。

另外將addMusicToList, PlayingUpdate 的請求前面加上"/api"，方便區分。

新增第6首歌。

--- a/views/musiclist.ejs
+++ b/views/musiclist.ejs
@@ -1,4 +1,9 @@
 <% layout('layout') %>
+<script>
+    if(window.location.pathname == "/home"){
+        document.write(`<div><h1>為您推薦</h1></div>`);
+    }
+</script>
 <div class="musicList">
     <% for(var i = 0; i < song.length; i++){ %>
         <div class="musicBlock" id="<%= song[i].filelink %>">
