feat: 可用歌手搜尋歌曲
index.js:
之前只能用歌曲名稱、歌曲類型、歌曲語言當作關鍵字搜尋，現在可利用歌手當關鍵字搜尋歌曲。

header.ejs:
將搜尋欄位的placeholder從"請輸入關鍵字"改為"我很好奇..."。

--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -14,7 +14,7 @@
         </nav>
         <div class="search">
             <form action="/search" method="post">
-                <input type="text" name="search" placeholder="請輸入關鍵字">
+                <input type="text" name="search" placeholder="我很好奇...">
                 <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i>搜尋</button>
             </form>
         </div>
