feat: 可在播放紀錄頁面刪除所有播放紀錄
index.js:
新增/api/clearHistory路由，用來刪除當前使用者所有播放紀錄。

script.js:
若清除紀錄的按鈕被點擊，傳遞請求給/api/clearHistory。

musiclist.ejs:
判斷若在播放紀錄的頁面，則新增一個清除紀錄的區塊按鍵。

style.css:
裝飾清空播放紀錄的區塊。

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -295,3 +295,16 @@ footer {
     width: 30%;
     align-self: flex-end;
 }
+
+/* 清除播放紀錄區塊 */
+.clear-history {
+    width: auto;
+    height: auto;
+    /* background-color: tomato; */
+    align-self: flex-end;
+    border: 1px solid black;
+    cursor: pointer;
+}
+.clear-history:hover {
+    background-color: rgb(115, 115, 115);
+}
