style: 刪掉一些用不到的程式碼
順便將一些變數名稱變直觀一點。

--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -23,6 +23,6 @@
         <h1><%= title %></h1>
     </div>
     <div class="angle">
-        <i class="fa-solid fa-angle-down fa-bounce fa-2xl" id="demo"></i>
+        <i class="fa-solid fa-angle-down fa-bounce fa-2xl" id="slide-angle"></i>
     </div>
 </header>
