--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,20 +10,10 @@ body {
 header {
     z-index: 1;
     display: block;
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-    /* grid-template-rows: 30% 70%; */
-    /* background-image: url("/images/banner7.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat; */
-    /* opacity: 0.5; */
     position: relative;
     width: 100%;
     height: 100vh;
     text-align: center;
-    /* font-family:Microsoft JhengHei; */
-    /* font-weight: bolder; */
 }
 .banner {
     z-index: -9;
@@ -54,11 +44,6 @@ header {
     }
     20% {
         opacity: 0.5;
-    }
-    50% {
-        /* opacity: 0.5; */
-        /* width: 140%;
-        height: 140%; */
     }
     80% {
         opacity: 0.5;
@@ -106,7 +91,6 @@ header {
     font-size: 20px;
 }
 nav {
-    /* background-color: red; */
     font-size: larger;
     width: 100%;
 }
@@ -125,7 +109,7 @@ nav > ul {
     list-style: none; /*移除項目符號*/
 }
 .flex-nav {
-    display: flex; /*並排*/
+    display: flex;
     justify-content: left;
 }
 .container {
@@ -143,39 +127,28 @@ nav > ul {
 footer {
     z-index: 5;
     position: fixed;
-    /* opacity: 0; */
     display: none;
     bottom: 0;
     width: 100%;
     height: 13vh;
 }
 .show {
-    /* opacity: 1; */
     display: block;
 }
 
 /* music block */
 .musicList {
-    /* z-index: 3; */
     width: 100%;
-    /* height: 100vh; */
-    background-color: rebeccapurple;
     text-align: left;
-    /* border: solid yellow 1px; */
     border-collapse: collapse;
-}
-.musicList th {
-    border-bottom: solid yellowgreen 1px;
 }
 .musicBlock {
     display: flex;
-    /* margin: 3vh; */
     padding: 5px;
     width: 100%;
     height: 150px;
     background-color: rgb(50, 50, 50);
     border: solid 1px black;
-    /* cursor: pointer; */
 }
 .musicCover {
     position: relative;
@@ -183,7 +156,6 @@ footer {
     justify-content: center;
     align-items: center;
     width: 20%;
-    /* height: 30vh; */
     left: 0;
     background-color: inherit;
     cursor: pointer;
@@ -207,30 +179,25 @@ footer {
 }
 .musicInfo {
     width: 70%;
-    /* height: 30vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: blueviolet; */
 }
 .musicName {
     width: 100%;
     height: 50%;
     font-size: 40px;
-    /* background-color: aquamarine; */
 }
 .musicSinger {
     width: 100%;
     height: 35%;
     font-size: 20px;
-    /* background-color: tomato; */
 }
 .musicAbout {
     display: flex;
     width: 100%;
     height: 15%;
-    /* background-color: darkgreen; */
 }
 .musicType {
     width: 45%;
@@ -248,7 +215,6 @@ footer {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    /* background-color: thistle; */
 }
 .functionBar:hover {
     background-color: rgb(115, 115, 115);
@@ -276,7 +242,6 @@ footer {
     align-items: center;
     width: 70%;
     height: auto;
-    /* background-color: tomato; */
     border: 1px solid black;
     cursor: pointer;
 }
@@ -300,7 +265,6 @@ footer {
 .clear-history {
     width: auto;
     height: auto;
-    /* background-color: tomato; */
     align-self: flex-end;
     border: 1px solid black;
     cursor: pointer;
