--- a/views/musiclist.ejs
+++ b/views/musiclist.ejs
@@ -1,10 +1,10 @@
 <% layout('layout') %>
 <script>
     if(window.location.pathname == "/home"){
-        document.write(`<div><h1>為您推薦</h1></div>`);
+        document.write(`<div><h1>為您推薦</h1></div><br>`);
     }
     else if(window.location.pathname == "/history"){
-        document.write(`<div class="clear-history"><i class="fa-solid fa-trash-can"></i>清除所有播放紀錄</div>`)
+        document.write(`<div class="clear-history"><i class="fa-solid fa-trash-can"></i>清除所有播放紀錄</div><br>`)
     }
 </script>
 <div class="musicList">
