--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,6 +15,7 @@
     </script>
 </head>
 <body>
+    <img src="static/images/link-start-sao.gif" alt="" class="link-start">
     <div class="demo form-bg">
         <div class="container">
             
